# wildlife-tools

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  prepare_dataset.py  pyproject.toml  requirements.txt  testing_inference.py  tox.ini  train.py  utils.py
.github/workflows/: code-quality.yml  docs.yml
baselines/data/: prepare_data.py  prepare_datasets.ipynb
baselines/inference/: MegaDescriptor-B-224.ipynb  MegaDescriptor-L-224.ipynb  MegaDescriptor-L-384.ipynb  MegaDescriptor-S-224.ipynb  MegaDescriptor-T-224.ipynb
baselines/training/: MegaDescriptor-B-224.ipynb  MegaDescriptor-L-224.ipynb  MegaDescriptor-L-384.ipynb  MegaDescriptor-S-224.ipynb  MegaDescriptor-T-224.ipynb
benchmark/data/: prepare_data.py  prepare_datasets.ipynb
benchmark/inference/: mega-base-224.ipynb  mega-large-224.ipynb  mega-small-224.ipynb  mega-tiny-224.ipynb
configs/: README.md  example_arcface.yaml  example_matcher.yaml  user_configs.yaml
data/: dataset.py  prepare.py
docs/: baseline.md  data.md  dataset.md  evaluation.md  features.md  index.md  inference.md  megadescriptor.md  reference_features.md  reference_inference.md  reference_similarity.md  reference_training.md  requirements.txt  sim_calibration.md  sim_cosine.md  sim_global.md  sim_matching.md  sim_wildfusion.md  similarity.md  training.md  wildfusion.md  wildlife_dataset.md
examples/: component_data.ipynb  component_similarity.ipynb  component_train.ipynb  example-features.ipynb  example-pairwise-sim.ipynb  example-wildfusion.ipynb  example_data_tools.ipynb  example_datasets.ipynb  example_deep_features.ipynb  example_sift_features.ipynb  example_training.ipynb  inference_deep_features.ipynb  inference_sift_correspondences.ipynb  replicate paper.ipynb  temp_refactor_similarity.ipynb  test-features.ipynb  test-pairwise-sim.ipynb  test-wildfusion.ipynb
examples/SampleDataset/: metadata.csv
examples/configs/: similarity_sift.yaml  train_seaturtles.yaml
inference/: evaluate.py  index.html  utils.py
megadescriptor/: index.html
models/: losses.py  matchers.py  trainers.py
parser/: experiment.py  factories.py
pipelines/: similarity.py  train.py
reference_features/: index.html
reference_inference/: index.html
reference_similarity/: index.html
reference_training/: index.html
scripts/: prepare_data.py  prepare_dataset.py  run_pipeline.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/data/: index.html
site/evaluation/: index.html
site/features/: index.html
site/similarity/: index.html
site/training/: index.html
site/wildlife_dataset/: index.html
tests/: conftest.py  test_data.py  test_deployed_checkpoints.py  test_extractors.py  test_features.py  test_inference.py  test_maintenance.py  test_pits.py  test_priors.py  test_similarity.py  test_train.py
tests/TestDataset/: metadata.csv
tools/: create_crops_dataset.py  create_re-id_dataset_from_mot.py  train_test_deploy.py
training/: index.html
wildfusion/: index.html
wildlife_tools/: __init__.py  tools.py
wildlife_tools/data/: __init__.py  cache.py  dataset.py  split.py  transform.py
wildlife_tools/evaluation/: __init__.py  classifier.py
wildlife_tools/features/: __init__.py  base.py  deep.py  gluefactory_fix.py  local.py  memory.py  sift.py  superpoint.py
wildlife_tools/fork_additions/: __init__.py  (+10 more)
(+64 files in other folders)
