[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
          'torch>=2.0.1',
          'timm>=0.9.2',
          'numpy>=1.19.4',
          'pandas>=1.1.4',
          'tqdm>=4.62.3',
          'opencv-python>=4.5.5.62',
          'Pillow>=7.1.2',
          'scikit-learn>=1.0.1',
          'pycocotools',
          'tensorboard',
          'pytorch_metric_learning',
          'transformers>=4.30.2',
          'wildlife-datasets>=1.0.7',
          'kornia>=0.6.12',
          'gluefactory @ git+https://github.com/cvg/glue-factory.git@1f56839db2242929960d70f85bfac6c19ef2821c',
          'onnx==1.17.0',
          'onnxconverter-common==1.14.0',
]

[project.optional-dependencies]
cuda = [
    "tensorrt==10.11.0.33",
    "pycuda==2025.1.1",
]

[project.urls]
"Homepage" = "https://github.com/VincentCoulombe/precision_track-ReID"
"Documentation" = "https://wildlifedatasets.github.io/wildlife-tools/"


[tool.setuptools]
packages = [
  "wildlife_tools",
  "wildlife_tools.data",
  "wildlife_tools.inference",
  "wildlife_tools.features",
  "wildlife_tools.similarity",
  "wildlife_tools.similarity.pairwise",
  "wildlife_tools.train",
  "wildlife_tools.fork_additions",
]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120